# gbs-compiler

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: changelog.md  getting-started.md  index.md  theory.md
docs/reference/: compiler.md  index.md  operations.md
examples/: example.py  example.xbb  example_squeezed.xbb
src/gbs_compiler/: __init__.py  compiler.py  operations.py
tests/: test_gbs_compiler.py
